@@ -1266,6 +1266,12 @@ Compartment::readL3Attributes (const XMLAttributes& attributes)
   //
   mIsSetSpatialDimensions = attributes.readInto("spatialDimensions", 
                         mSpatialDimensionsDouble, getErrorLog(), false);
+  
+  // keep integer value as record if spatial dimesnions is 0, 1, 2, 3 
+  if (mIsSetSpatialDimensions == true)
+  {
+    mSpatialDimensions = (int) (mSpatialDimensionsDouble);
+  }
     
   //
   // constant  { use="required" }  (L3v1 ->)
